--- a/sections/100days-page.liquid
+++ b/sections/100days-page.liquid
@@ -5,7 +5,7 @@
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 
 
-<div class="photo-headerBG" style="background-image:url({{ '100-day-home-trial-hero.jpg' | asset_url }}); background-position: 50% 0; ">
+<div class="photo-headerBG" style="background-image:url({{ '100-day-home-trial-hero.jpg' | asset_url }}); background-position: 50% 0; ;">
     <div class="ph-width">
         <div class="ph-text">
             <cms id='cms0'>
