--- a/sections/choosing-page.liquid
+++ b/sections/choosing-page.liquid
@@ -121,7 +121,7 @@
 
 <div class="two-cols two-cols-wide tc-reverse">
     <div class="col">
-        <img src="{{ 'choose-why-choose.jpg' | asset_url }}" alt="Woman on Couch with Photon" />
+        <img src="{{ 'choose-why-choose.jpg' | asset_url }}" alt="Woman on Couch with Photon" loading="lazy" />
     </div>
     <div class="col">
         <div class="tcw-text">
@@ -138,7 +138,7 @@
 
 <div class="two-cols two-cols-wide">
     <div class="col">
-        <img src="{{ 'health-benefits-thermalight.jpg' | asset_url }}" alt="Thermalight bulb" />
+        <img src="{{ 'health-benefits-thermalight.jpg' | asset_url }}" alt="Thermalight bulb" loading="lazy"  />
     </div>
     <div class="col">
         <div class="tcw-text">
@@ -161,19 +161,19 @@
             </div>
             <div class="db-icons">
                 <div class="db-icon etica">
-                    <img src="{{ 'detoxification-white.svg' | asset_url }}" alt="" />
+                    <img src="{{ 'detoxification-white.svg' | asset_url }}" alt="" loading="lazy"  />
                     Detoxification
                 </div>
                 <div class="db-icon etica">
-                    <img src="{{ 'immunity-boosting-white.svg' | asset_url }}" alt="" />
+                    <img src="{{ 'immunity-boosting-white.svg' | asset_url }}" alt="" loading="lazy"  />
                     Immunity Boosting
                 </div>
                 <div class="db-icon etica">
-                    <img src="{{ 'stress-reduction-white.svg' | asset_url }}" alt="" />
+                    <img src="{{ 'stress-reduction-white.svg' | asset_url }}" alt="" loading="lazy"  />
                     Stress Reduction
                 </div>
                 <div class="db-icon etica">
-                    <img src="{{ 'mental-performance-white.svg' | asset_url }}" alt="" />
+                    <img src="{{ 'mental-performance-white.svg' | asset_url }}" alt="" loading="lazy"  />
                     Mental Performance
                 </div>
             </div>
