--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -29,17 +29,17 @@
 <section>
 <div class="contact-cols">
   <div class="contact-col">
-    <img src="{{ 'contact-phone.svg' | asset_url }}" alt="" />
+    <img src="{{ 'contact-phone.svg' | asset_url }}" alt=""  loading="lazy"/>
     <div class="contact-col-head">Give us a call</div>
     <p><a href="tel:15736672862">+1-573-667-2862</a></p>
   </div>
   <div class="contact-col">
-    <img src="{{ 'contact-email.svg' | asset_url }}" alt="" />
+    <img src="{{ 'contact-email.svg' | asset_url }}" alt="" loading="lazy" />
     <div class="contact-col-head">Send us an email</div>
     <p><a href="mailto:hello@sauna.space">hello@sauna.space</a></p>
   </div>
   <div class="contact-col">
-    <img src="{{ 'contact-chat.svg' | asset_url }}" alt="" />
+    <img src="{{ 'contact-chat.svg' | asset_url }}" alt="" loading="lazy"/>
     <div class="contact-col-head">Chat with us</div>
     <p><a href="javascript:void(0)" onclick="GorgiasChat.open()">Send us a message</a></p>
   </div>
