dark mode updates to minicart
Former-commit-id: eb384f91c84d54ca66f8e92d87fe0293104e9af4
Former-commit-id: d47bdb248e4f9516feaa2c54dc5fd3713428c567

--- a/assets/base.css
+++ b/assets/base.css
@@ -3122,6 +3122,7 @@ section:not(.shopify-section) {
 	background-repeat: no-repeat;
 	background-size: 13px;
 	background-position: 50% 50%;
+	display: inline-block;
 }
 	
 .nav-links {
