--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -13,8 +13,9 @@ td.cart-item__details .op-30day {
     margin-top: 45px;
 }
 .cart-item__quantity-wrapper input.quantity__input {
-    border-top: 1px solid #C67A26;
-border-bottom: 1px solid #C67A26;
+  border-top: 1px solid #C67A26;
+  border-bottom: 1px solid #C67A26;
+  border-radius: 0;
 }
 th.caption-with-letter-spacing {
     /* margin-bottom: -21px !important; */
