--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -173,7 +173,7 @@
 
     {{ tracking_code }}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script>
       (function($){        
