--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -36,7 +36,7 @@
     <script src="{{ 'gocart.js' | asset_url }}"></script>
 
     {% render 'meta-tags' %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
     <script id="vopo-head">
@@ -307,7 +307,7 @@
 
     {% section 'footer' %}
 
-    <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1659448892&shop=saunadev.myshopify.com" defer></script>
+    
 
     
 
@@ -452,7 +452,11 @@
     ></script>
     {% endif %}
 
-  <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1659473314&shop=saunaspace.myshopify.com" defer></script>
+  <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1659992061&shop=saunaspace.myshopify.com" defer></script>
+
+  
+
+  
 
     <script>
         {% if product %}
