--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -265,6 +265,8 @@
     text-decoration: none;
     font-weight: bold;
     white-space: break-spaces;
+    display: inline-block;
+    margin-bottom: 10px;
   }
 
   .go-cart-item__title:hover {
@@ -309,6 +311,8 @@
     border-right: none;
     outline: none;
     -moz-appearance: textfield;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
   }
   .go-cart-item__quantity-number::-webkit-inner-spin-button,
   .go-cart-item__quantity-number::-webkit-outer-spin-button {
@@ -398,7 +402,7 @@
     font-family: work sans;
     margin: 1.5rem 3rem 0;
     padding-bottom: 1rem;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #939393;
     font-weight: normal;
     position: relative;
     text-align: left;
