cart css fixes for shipping calculator
Former-commit-id: ab67feb73eb0ad62a15c32dcebc82a1ddfc1deed
Former-commit-id: 5e15a0fce56bbaf6557914a63cacf445cce36a19
Former-commit-id: 6c43952bffebbbde3a3dcab0609319afe7d0ac4a
Former-commit-id: 4b4bfb380576a3fa7db5f71a95252c33f10bd14e
Former-commit-id: 3dfcd510683a36fb145f0f8c1b0397c427ca2fc9

--- a/assets/base.css
+++ b/assets/base.css
@@ -3920,6 +3920,7 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 
 .cbb-shipping-rates-rate-item {
 	list-style-type: none !important;
+	margin-bottom: 8px !important;
 }
 
 	.yc-col-head span { font-weight: 400; font-size: 1.6rem;}
