product page - remove local pickup option and main cart footer shipping calculator styles
Former-commit-id: e65674cae9b424de725fdf1799c60791e60bbbc6
Former-commit-id: 6a34340e1118c45e5e4e60b66cdc1bfa9f59dfa0
Former-commit-id: 4b13af2ede0e5c29e935349e014c59b11a5ae24a
Former-commit-id: a85e5095789185860e329b544cb76511fe6f307c
Former-commit-id: 9de1b395ca9305cd818ad51d0a90a6a560838045

--- a/assets/base.css
+++ b/assets/base.css
@@ -3903,12 +3903,12 @@ a.shop-nav-head:hover { border-bottom: 1px solid #000; }
 }
 
 .cbb-shipping-rates-calculator-chooser {
-	margin-bottom: 0px;
+	margin-bottom: 0 !important;
 }
 
 .cbb-shipping-rates-calculator-change-shipping-address {
-	margin-top: 0px;
-	padding: 20px 0px 7px 0px;
+	margin-top: 0px !important;
+	padding: 20px 0px 7px 0px !important;
 }
 
 .cbb-shipping-rates-calculator-country-select, .cbb-shipping-rates-calculator-region-select {    
