--- a/snippets/product-page.liquid
+++ b/snippets/product-page.liquid
@@ -20,30 +20,21 @@
   
   })}, 700);
 
-
-//   $( ".bcpo-front-image-option" ).change(function(variant) {
-//     bcpoChange(variant);
-//   });
-
-
-
-
-//   function bcpoChange(currentVariant) {
-//     console.log('bcpo: ' + bcpo.variant.id);
-//     console.log(currentVariant.variant);
-//     const variants = document.querySelectorAll('[data-variant-id]')
-  
-//     variants.forEach( function(variant) {
-//       //hide all variant descriptions
-//       variant.style.display = 'none';
-//       if(variant.dataset.variantId == bcpo.variant.id){
-//         //if current variant unhide the variant description
-//         variant.style.display = 'block'
-//       }
-//   });
-// }
-
-
-
 });
+
+// variant lead time metafield listener
+function bcpoChange(currentVariant) {
+    console.log('bcpo: ' + bcpo.variant.id);
+    console.log(currentVariant.variant);
+    const variants = document.querySelectorAll('[data-variant-id]')
+  
+    variants.forEach( function(variant) {
+      //hide all variant descriptions
+      variant.style.display = 'none';
+      if(variant.dataset.variantId == bcpo.variant.id){
+        //if current variant unhide the variant description
+        variant.style.display = 'block'
+      }
+  });
+}
 </script>
