--- a/assets/dark.css
+++ b/assets/dark.css
@@ -59,13 +59,18 @@
     background-color: #000;
   }
 
+  .dark .cbb-shipping-rates-error-message {
+    background-color: #000 !important;
+  }
+
   .dark .research-links h3, .dark .what-is, .dark .story, .dark .gHjTpK.gHjTpK, .dark .compatible h2, .dark .compatible, .dark .optimize h2, 
   .dark .optimize, .dark .story blockquote, .dark .etica,
   .dark .intro p, .dark .intro a, .dark .people h3, .dark .people h2, .dark .people p,
   .dark .self p, .dark .self a, .dark .self h3, .dark .openings a, .dark .opening p, 
   .dark .opening a, .dark .opening h3, .dark .opening ul, .dark .opening li, 
   .dark .opening li::marker, .dark .opening span,
-  .dark .customer, .dark .customer h1, .dark .customer a, .dark .shopify-challenge__message,
+  .dark .customer, .dark .customer h1, .dark .customer a, .dark .shopify-challenge__message, 
+  .dark .cbb-shipping-rates-error-message,
   .dark .customer thead th, .dark .customer tbody td, .dark .customer strong, .dark .yc-col-head, .dark .totals *, .dark .go-cart-item__title, .dark .go-cart-item__quantity-number, .dark .cbb-shipping-rates-note,
   .dark .yc-col-head, .dark .ycc-lineitem, .dark .cbb-shipping-rates-calculator-header, .dark .cbb-shipping-rates-rate-item, .dark .cbb-shipping-rates-calculator-change-shipping-address, .dark .cbb-shipping-rates-calculator-country-select, .dark .cbb-shipping-rates-calculator-region-select, .dark .cbb-shipping-rates-calculator-zip-code
   {
