top features metafield naming convention update
Former-commit-id: c9a43e5c548268bfa5cbf1688948fd3209377e2c
Former-commit-id: 81e79dee8c8b0816d4580fa89bc6be18af2d5c9e

--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -731,10 +731,10 @@
     
     </div>
     
-  	{% if product.metafields.my_fields.top-features != blank %}
+  	{% if product.metafields.my_fields.top_features != blank %}
     <div class="maroonBG">
     <div class="top-features">
-		{{ product.metafields.my_fields.top-features }}    
+		{{ product.metafields.my_fields.top_features }}    
     </div>
     </div>
   	{% endif %}
