updating refurb page query loop to only show available products
Former-commit-id: 4751e155fd5481ea95f850ac9ebcf890bd3a1286
Former-commit-id: c45b0cc2154591890ffcc233393703601cc3b49d

--- a/sections/refurb-page.liquid
+++ b/sections/refurb-page.liquid
@@ -34,7 +34,7 @@
     {%- if forloop.index > 2 -%}
       {%- assign lazy_load = true -%}
     {%- endif -%}
-
+    {% if product.available %}
     <li class="grid__item">
       {% render 'card-product',
         card_product: product,
@@ -45,6 +45,7 @@
         lazy_load: lazy_load
       %}
     </li>
+    {% endif %}
   {%- endfor -%}
 </ul>
 
