--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -408,7 +408,10 @@
                 <div class="atc-outOfStock">
                     
                         <p><strong>Sorry, this item is out of stock.</strong></p>
-                    <p>Please select a different color.</p>
+                        {% if product.id == 2105477365849 or product.id == 2105476743257 or product.id == 2105475661913 or product.id == 2105476546649 %}
+                          <p>Please select a different color.</p>
+                        {% endif %}
+                   
                 </div>
             </div>
             
