mini cart updates for usd pricing without decimals
Former-commit-id: 705ccdbbcd9783cff5bf0380511fbef8a2b566ba
Former-commit-id: 3e668a78db90fa6aba6d6b73c1233208f7219e84

--- a/assets/base.css
+++ b/assets/base.css
@@ -1692,6 +1692,7 @@ details[open] > .share-button__fallback {
   cursor: pointer;
   line-height: calc(1 + 0.6 / var(--font-body-scale));
   padding: 0 2rem;
+  color: #000;
   margin: var(--inputs-border-width);
   min-height: calc(var(--inputs-border-width) * 2);
   padding: 1rem 1.5rem 1rem 2rem;
