ios form updates
Former-commit-id: b225750e958f0181c1f30035591ff5cd91281523
Former-commit-id: 26ecaa2936b90e35a7ab221e3bba5422397a983b
Former-commit-id: 412764e2b4551f630bae6be8e408af89b8b8265d
Former-commit-id: 36f91c3d6f52e5b5bb94deba6448da682c926961
Former-commit-id: 1990ce9c06d5450c221038a5ac6d7bfcbe0b6809

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -55,10 +55,14 @@
     background: rgba(67,60,60,.55);
   }
 
-  .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number, .dark .go-cart__mini-cart, .dark .go-cart__mini-cart.js-go-cart-mini-cart.is-open::before {
+ .dark .select__select,
+ .dark .customer select, .dark .product-media-modal, .dark .eufhEh.eufhEh, .dark .go-cart-item__quantity-number, .dark .go-cart__mini-cart, .dark .go-cart__mini-cart.js-go-cart-mini-cart.is-open::before {
     background-color: #000;
   }
-
+  .dark .select__select,
+  .dark .customer select {
+    background: #000;
+  }
   .dark .cbb-shipping-rates-error-message {
     background-color: #000 !important;
   }
