cart page edits
Former-commit-id: c39497be4123da8a21b52f8db741005d60bf8c35
Former-commit-id: 0702859d36d1e2db924b99bfc1298534bafc7b96
Former-commit-id: 046c83f2b9a7149640efd99d6f474b46bfaf1277
Former-commit-id: 2ea8b390051e848734ce550f7c18f9f0cf96778c
Former-commit-id: a9126969156f23866b35839d5f4c76004303c3cb

--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -8,6 +8,7 @@
 .price > * {
   display: inline-block;
   vertical-align: top;
+  font-size: 14px;
 }
 
 .price.price--unavailable {
@@ -19,7 +20,7 @@
 }
 
 .price .price-item {
-  margin: 0 1rem 0 0;
+  margin: 0;
 }
 
 .price__regular .price-item--regular {
