--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -275,10 +275,6 @@ cart-remove-button .icon-remove {
   display: none;
 }
 
-.product-option {
-  color: rgba(var(--color-foreground), 0.7);
-}
-
 .product-option + .product-option {
   margin-top: 0.4rem;
 }
@@ -352,7 +348,7 @@ td.cart-item__details .op-30day {
     margin-bottom: 0;
   }
 
-  .cart-item__media {
+  /* .cart-item__media {
     grid-row: 1 / 3;
   }
 
@@ -362,7 +358,7 @@ td.cart-item__details .op-30day {
 
   .cart-item__quantity {
     grid-column: 2 / 5;
-  }
+  } */
 
   .cart-item__quantity-wrapper {
     flex-wrap: wrap;
@@ -377,6 +373,12 @@ td.cart-item__details .op-30day {
 
 .cart-item__error-text + svg {
   margin-top: 0.4rem;
+}
+
+td.cart-item__price .product-option {
+  font-size: 14px;
+  color: #000;
+  font-family: lft-etica-mono,sans-serif;
 }
 
 @media screen and (min-width: 750px) {
@@ -425,15 +427,15 @@ td.cart-item__price {
   td.cart-item__price {
     text-align: center;
 }
-  td.cart-item__price .product-option {
-    font-size: 16px;
-    color: #000;
-    font-family: lft-etica-mono,sans-serif;
-}
+
   td.cart-item__price .product-option s {
-    display: block;
+    display: inline;
      color: #767676;
     width: 100%;
+}
+
+.product-option s {
+  display: inline;
 }
   .cart-item__details {
     width: 35rem;
@@ -481,11 +483,11 @@ td.cart-item__price .product-option s{
   }
 
   .cart-item__details {
-    width: 40rem;
+    width: 28rem;
   }
   td.cart-item__quantity {
-    width: 184px;
-    min-width: 200px;
+    width: 100px;
+    min-width: 100px;
 }
 
   .cart-items thead th:first-child {
